--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+AngularJsScaffoldingApp/bin
+AngularJsScaffoldingApp.v12.suo
+AngularJsScaffoldingApp/obj
+*.suo
