--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Temporary Items
 AngularJsScaffoldingApp/bin/
 AngularJsScaffoldingApp.v12.suo
 AngularJsScaffoldingApp/obj/
+AngularJsScaffoldingApp/obj/Debug/AngularJsScaffoldingApp.csproj.FileListAbsolute.txt
+AngularJsScaffoldingApp/obj/Debug/AngularJsScaffoldingApp.csproj.GenerateResource.Cache
