several module toghether

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ AngularJsScaffoldingApp.v12.suo
 AngularJsScaffoldingApp/obj/
 AngularJsScaffoldingApp/obj/Debug/AngularJsScaffoldingApp.csproj.FileListAbsolute.txt
 AngularJsScaffoldingApp/obj/Debug/AngularJsScaffoldingApp.csproj.GenerateResource.Cache
+/packages
